--- a/admin/assets/css/isc.css
+++ b/admin/assets/css/isc.css
@@ -2,8 +2,9 @@
 SETTINGS
 */
 
-#isc-settings-highlighted label { font-weight: bold; }
-#isc-settings-highlighted .description { margin-left: 1.7em; margin-bottom: .5em; }
+.isc-settings-highlighted label { font-weight: bold; }
+.isc-settings-highlighted .isc-empty-label { margin-left: 1.7em;  }
+.isc-settings-highlighted .description { margin-left: 1.7em; margin-bottom: .5em; }
 #isc-settings-licenses textarea { width: 40em; height: 7em; }
 .isc-settings-is-pro { font-weight: normal; font-style: italic; }
 #image-settings-form .hndle { cursor: text; user-select: all; }
