--- a/admin/assets/css/isc.css
+++ b/admin/assets/css/isc.css
@@ -61,7 +61,7 @@
     text-decoration: none;
 }
 
-#isc-header-links a.isc-header-links-pro {
+#isc-header-links a.isc-get-pro {
     background-color: #F70;
     font-weight: bold;
 }
