move global list thumbnail settings
Moved the thumbnail-related settings of the Global List into the Included Data settings.

The details thumbnail options are now hidden instead of disabled when the thumbnail is not selected to be included in the list.

--- a/admin/assets/css/isc.css
+++ b/admin/assets/css/isc.css
@@ -74,6 +74,7 @@
 .isc-settings-highlighted .description { margin-left: 1.7em; margin-bottom: .5em; }
 #isc-settings-licenses textarea { width: 40em; height: 7em; }
 #image-settings-form .hndle { cursor: text; user-select: all; }
+#thumbnail-size-select { vertical-align: baseline;}
 
 /**
  * Meta field in media view
