Hide position option when markup is disabled
Hide the position option when the option to remove the Markup in the frontend is enabled.

I also moved the position option into the Layout section above, to make it more obvious that they are related.

--- a/admin/assets/css/isc.css
+++ b/admin/assets/css/isc.css
@@ -76,7 +76,7 @@
 #image-settings-form .hndle { cursor: text; user-select: all; }
 #thumbnail-size-select { vertical-align: baseline;}
 
-#isc-settings-caption-position-options-wrapper {
+#isc-settings-caption-position-options-wrapper:not(.hidden) {
     display: flex;
     align-items: flex-start;
     position: relative;
