Add Post Index table
Added a table that shows how many published posts for each post type are indexed.

Reordered a view tool page views for more clarity.

Fixed a small JavaScript bug on the page.

--- a/admin/assets/css/isc.css
+++ b/admin/assets/css/isc.css
@@ -153,6 +153,7 @@
 /**
  * SOURCES PAGE
  */
+.isc-table:not(.isc-table-debug-list) thead th:first-of-type { width: 20%; }
 .isc-table-debug-list th { width: 50%; }
 
 /**
