Show image thumbnails
Show the image thumbnails instead of IDs on the Tools page.

--- a/admin/assets/css/isc.css
+++ b/admin/assets/css/isc.css
@@ -155,6 +155,7 @@
  */
 .isc-table:not(.isc-table-debug-list) thead th:first-of-type { width: 20%; }
 .isc-table-debug-list th { width: 50%; }
+.isc-table img.attachment-60x60 { width: 60px; height: auto; }
 
 /**
  + Miscellaneous
