Remove irrelevant icon in the caption style preview on the settings page

--- a/admin/templates/settings/preview/caption-preview.html
+++ b/admin/templates/settings/preview/caption-preview.html
@@ -49,7 +49,7 @@
 </div>
 <script>
 	document.getElementById('preview_image').src = path + 'admin/templates/settings/preview/image-for-position-preview.jpg';
-	document.querySelector('.isc-source-text').innerHTML = caption_pretext + '@ Source';
+	document.querySelector('.isc-source-text').innerHTML = caption_pretext + 'Jane Doe';
 </script>
 </body>
 </html>
