--- a/admin/assets/css/isc.css
+++ b/admin/assets/css/isc.css
@@ -139,6 +139,21 @@
     border: 1px solid #ddd;
 }
 
+#source-pretext-buttons:not(.hidden) {
+    display: inline-block;
+}
+#source-pretext-buttons button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: #333;
+    font-size: 16px;
+}
+
+#source-pretext-buttons button {
+    color: #000;
+}
+
 /**
  * Meta field in media view
  */
